bootstrap_subtheme/less/overrides.less
/* ... */
// Checkbox cell fix.
th.checkbox,
td.checkbox,
th.radio,
td.radio {
  display: table-cell;
}

// Views UI fixes.
.views-display-settings {
  .label {
    font-size: 100%;
    color:#666666;
  }
  .footer {
    padding:0;
    margin:4px 0 0 0;
  }
}

// Treat all links inside alert as .alert-link
.alert a {
  font-weight: @alert-link-font-weight;
}
.alert-success a {
  color: darken(@alert-success-text, 10%);
}
.alert-info a {
  color: darken(@alert-info-text, 10%);
}
.alert-warning a {
  color: darken(@alert-warning-text, 10%);
}
.alert-danger a {
  color: darken(@alert-danger-text, 10%);
}

